Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15737

assertion in mariabackup.exe!recv_calc_lsn_on_data_add()

    XMLWordPrintable

Details

    Description

      There is a recent assertion in debug version of mariabackup . happens post MDEV-14545 fix.

      It goes like this

      Assertion failed: frag_len < 512U - 12 - 4, file D:\winx64-debug\build\src\storage\innobase\log\log0recv.cc, line 2192
      180329 16:45:25 [ERROR] mysqld got exception 0x80000003 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed, 
      something is definitely wrong and this may fail.
       
      Server version: 10.3.6-MariaDB-debug
      key_buffer_size=0
      read_buffer_size=131072
      max_used_connections=0
      max_threads=1
      thread_count=0
      It is possible that mysqld could use up to 
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 5113 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x0
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      mariabackup.exe!my_sigabrt_handler()[my_thr_init.c:485]
      mariabackup.exe!raise()[signal.cpp:516]
      mariabackup.exe!abort()[abort.cpp:71]
      mariabackup.exe!common_assert_to_stderr<wchar_t>()[assert.cpp:149]
      mariabackup.exe!_wassert()[assert.cpp:404]
      mariabackup.exe!recv_calc_lsn_on_data_add()[log0recv.cc:2191]
      mariabackup.exe!recv_parse_log_recs()[log0recv.cc:2327]
      mariabackup.exe!xtrabackup_copy_log()[xtrabackup.cc:2426]
      mariabackup.exe!xtrabackup_copy_logfile()[xtrabackup.cc:2494]
      mariabackup.exe!log_copying_thread()[xtrabackup.cc:2531]
      KERNEL32.DLL!BaseThreadInitThunk()
      ntdll.dll!RtlUserThreadStart()
      

      Can be found e.g in https://buildbot.askmonty.org/buildbot/builders/winx64-debug/builds/7865/steps/test/logs/stdio or in
      https://buildbot.askmonty.org/buildbot/builders/winx64-debug/builds/7867
      or in
      https://buildbot.askmonty.org/buildbot/builders/win32-debug/builds/8086/steps/test/logs/stdio

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              wlad Vladislav Vaintroub
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5h
                  5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.